# TalosPOC

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
patches/: README.md  apply_patches.py  copilotkit_emit_messages_fix.patch
src/: agent_mapper.py  console_run.py  main.py  node_mapper.py  server.py
src/agents/: consulting_agent.py  tlc_agent.py
src/agents/coordinators/: admittance.py  human_interaction.py  intention_detection.py  planner.py
src/agents/specialists/: cc_agent.py  presenter.py  re_agent.py  tlc_agent.py
src/benchmark/: admittance_bm_1.0.ipynb  admittance_bm_1.1.ipynb  admittance_bm_1.2.ipynb  demo_console_run.ipynb
src/classes/: PROMPT.py  __init__.py  agent_flow_state.py  operation.py  system_enum.py  system_state.py
src/data/: tlc_data.json  tlc_result.json
src/functions/: __init__.py  admittance.py  confidency_guardian.py  human_interaction.py  intention_detection.py  planner.py
src/models/: cc.py  core.py  enums.py  operation.py  planner.py  re.py  tlc.py
src/tests/: console_run.py  examples.ipynb  main.py  test_workflow.py
src/tests/benchmark/: admittance_bm_1.0.ipynb  admittance_bm_1.1.ipynb  admittance_bm_1.2.ipynb  demo_console_run.ipynb
src/utils/: PROMPT.py  logging_config.py  messages.py  models.py  settings.py  timezone.py  tools.py
tests/: conftest.py  console_run.py  test_workflow.py
